<resources>
    <string name="app_name">Dutmella</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="start_tijd">Start tijd:</string>
    <string name="start_datum">Start datum:</string>
    <string name="speltak">Speltak:</string>

    <string-array name="speltakken">
        <item>Bevers</item>
        <item>Shanti</item>
        <item>Jacala</item>
        <item>Verkensters</item>
        <item>verkenners</item>
        <item>Sangas</item>
        <item>Explorers</item>
        <item>Rovers</item>
        <item>Stam</item>
        <item>Plusscouts</item>
        <item>Groepsbestuur</item>
        <item>Stichtingbestuur</item>
    </string-array>

    <string name="Speltak">Speltak</string>
    <string name="Aantal_Begeleiders">Aantal Begeleiders</string>
    <string name="LeeftijdBegeleiders">Leeftijd Begeleiders</string>
    <string name="aantal_leden">Aantal Leden</string>
    <string name="Datum">Datum</string>

    <string name="aantal_begeleiders">Aantal Begeleiders</string>
    <string name="leeftijd_begeleiders">Leeftijd Begeleiders</string>
    <string name="datum">Datum</string>
    <string name="bevestig">Bevestig</string>


    <string-array name="Speltak">
        <item>Bevers</item>
        <item>Welpen</item>
        <item>Scouts</item>
        <item>Explorers</item>
        <item>Roverscouts</item>
    </string-array>

    <string-array name="ABEG">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="LeeftijdBegeleiders">
        <item>21 - 30 jaar </item>
        <item> 30 - 50 jaar</item>

    </string-array>

    <string-array name="Alid">
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
    </string-array>




</resources>
